@@ -48,4 +48,10 @@ class CleanLoggerTest < Test::Unit::TestCase
     assert_equal "%Y-%m-%d", @logger.datetime_format
     assert_match(/D, \[\d\d\d\d-\d\d-\d\d#\d+\] DEBUG -- : debug/, @out.string)
   end
+  
+  def test_nonstring_formatting
+    an_object = [1, 2, 3, 4, 5]
+    @logger.debug an_object
+    assert_equal("#{an_object.inspect}\n", @out.string)
+  end
 end
